[tool.poetry]
name = "signed_upload"
version = "0.1.0"
description = ""
authors = ["Nilton Frederico Teixeira <9078708+niltonfrederico@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.22.13"
fastapi = "^0.77.1"
environs = "^9.5.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
